# ComfyUI-BooleanExpression

./: README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml
custom_nodes/: arithmetic_comparison_nodes.py  boolean_nodes.py  string_comparison_nodes.py
doc/workflows/: conditional-format-prompt.json  conditional-latent-image.json
